fix spacing on home page

--- a/components/splashpage/MainDeer.css
+++ b/components/splashpage/MainDeer.css
@@ -1,5 +1,5 @@
 .DHDCopyWrapper {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
 }
 
